Fixed alignment of fulfillment unavailable messages.

--- a/stylesheets/modules/cart/cart-table.less
+++ b/stylesheets/modules/cart/cart-table.less
@@ -87,9 +87,7 @@
     width: 230px;
 }
 
-.fulfillment-unavailable-message {
-  color: #ccc;
-}
+
 
 .location-select-option{
   border-bottom: 1px solid #ccc;
@@ -107,12 +105,6 @@
     text-transform: uppercase;
     color: @unavailableText;
 }
-
-// #mz-location-selector .modal-dialog{
-//   position: absolute;
-//   bottom: 0;
-//   right: 0;
-// }
 
 .mz-fulfillment-options {
   list-style: none;
@@ -133,6 +125,11 @@
   input:disabled+label{
     color: #ccc;
     cursor: default;
+  }
+
+  .fulfillment-unavailable-message {
+    color: #ccc;
+    margin-left: 30px;
   }
 
 }
